Updated index with COVID-19 lab

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ summary {
 <p>Below, you will see all of the labs completed thus far and presented in preparation for Lab #6</p>
 <div id="labs-completed-as-of-26_february_2020" class="section level1">
 <h1>Labs completed as of 26_February_2020</h1>
-<p><em><a href="lab2b_sjs.html">Lab2</a>, </em><a href="lab3_sjs.html">Lab3</a>, <em><a href="Lab-4_sjs.html">Lab4</a>, </em><a href="Lab5_sjs.html">Lab5</a></p>
+<p><em><a href="lab2b_sjs.html">Lab2</a>, </em><a href="lab3_sjs.html">Lab3</a>, <em><a href="Lab-4_sjs.html">Lab4</a>, </em><a href="Lab5_sjs.html">Lab5</a>, *<a href="sjs_COVID-19-Lab.html">COVID-19 Data Analysis</a></p>
 <p>Application written in R <span class="citation">(R Core Team 2015)</span> using the Shiny framework <span class="citation">(Chang et al. 2015)</span></p>
 </div>
 <div id="references" class="section level1 unnumbered">
