--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ summary {
 
 <h1 class="title toc-ignore">index</h1>
 <h4 class="author">Shannon Silva</h4>
-<h4 class="date">4/15/2020</h4>
+<h4 class="date">4/27/2020</h4>
 
 </div>
 
@@ -374,14 +374,18 @@ summary {
 <p class="caption">Welcome to my website of R-coding!</p>
 </div>
 <p>Below, you will see all of the labs completed thus far and presented in preparation for Lab #6</p>
-<div id="labs-completed-as-of-15_april_2020" class="section level1">
-<h1>Labs completed as of 15_April_2020</h1>
+<div id="labs-completed-as-of-27_april_2020" class="section level1">
+<h1>Labs completed as of 27_April_2020</h1>
 <p>*<a href="lab2b_sjs.html">Lab2</a></p>
 <p>*<a href="lab3_sjs.html">Lab3</a></p>
 <p>*<a href="Lab-4_sjs.html">Lab4</a></p>
 <p>*<a href="Lab5_sjs.html">Lab5</a></p>
 <p>*<a href="sjs_COVID-19-Lab.html">COVID-19 Data Analysis</a></p>
 <p>*<a href="sjs_lab10_COVID-19_animated.html">Animated COVID-19 Data Analysis</a></p>
+<p>*<a href="url(https://shannon3942.shinyapps.io/sjs_covid-19_app/)">Time Series of Confirmed Cases_Exercise 1</a></p>
+<p>*<a href="url(https://shannon3942.shinyapps.io/Shiny_app_Exercise2/)">Time Series with Reporting Data_Exercise 2</a></p>
+<p>*<a href="url(https://shannon3942.shinyapps.io/Shiny_app_Exercise3/)">Time Series with Country_Exercise 3</a></p>
+<p>*<a href="url(https://shannon3942.shinyapps.io/Shiny_app_Exercise4/)">Geographical Map of COVID-19 Cases in Massachusetts</a></p>
 <p>Application written in R <span class="citation">(R Core Team 2015)</span> using the Shiny framework <span class="citation">(Chang et al. 2015)</span></p>
 </div>
 <div id="references" class="section level1 unnumbered">
