--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ summary {
 <p>*<a href="Lab5_sjs.html">Lab5</a></p>
 <p>*<a href="sjs_COVID-19-Lab.html">COVID-19 Data Analysis</a></p>
 <p>*<a href="sjs_lab10_COVID-19_animated.html">Animated COVID-19 Data Analysis</a></p>
-<p>*<a href="https://shannon3942.shinyapps.io/sjs_covid-19_app/">Time Series of Confirmed Cases_Exercise 1</a></p>
+<p>*Time Series of Confirmed Cases_Exercise 1 url = {<a href="https://shannon3942.shinyapps.io/sjs_covid-19_app/" class="uri">https://shannon3942.shinyapps.io/sjs_covid-19_app/</a>}</p>
 <p>*<a href="https://shannon3942.shinyapps.io/Shiny_app_Exercise2/">Time Series with Reporting Data_Exercise 2</a></p>
 <p>*<a href="https://shannon3942.shinyapps.io/Shiny_app_Exercise3/">Time Series with Country_Exercise 3</a></p>
 <p>*<a href="https://shannon3942.shinyapps.io/Shiny_app_Exercise4/">Geographical Map of COVID-19 Cases in Massachusetts</a></p>
