--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ summary {
 
 <h1 class="title toc-ignore">index</h1>
 <h4 class="author">Shannon Silva</h4>
-<h4 class="date">4/27/2020</h4>
+<h4 class="date">5/7/2020</h4>
 
 </div>
 
@@ -374,8 +374,8 @@ summary {
 <p class="caption">Welcome to my website of R-coding!</p>
 </div>
 <p>Below, you will see all of the labs completed thus far and presented in preparation for Lab #6</p>
-<div id="labs-completed-as-of-27_april_2020" class="section level1">
-<h1>Labs completed as of 27_April_2020</h1>
+<div id="labs-completed-as-of-7_may_2020" class="section level1">
+<h1>Labs completed as of 7_May_2020</h1>
 <p>*<a href="lab2b_sjs.html">Lab2</a></p>
 <p>*<a href="lab3_sjs.html">Lab3</a></p>
 <p>*<a href="Lab-4_sjs.html">Lab4</a></p>
@@ -386,6 +386,8 @@ summary {
 <p>*Time Series with Reporting Data_Exercise 2 url = {<a href="https://shannon3942.shinyapps.io/Shiny_app_Exercise2/" class="uri">https://shannon3942.shinyapps.io/Shiny_app_Exercise2/</a>}</p>
 <p>*Time Series with Country_Exercise 3 url = {<a href="https://shannon3942.shinyapps.io/Shiny_app_Exercise3/" class="uri">https://shannon3942.shinyapps.io/Shiny_app_Exercise3/</a>}</p>
 <p>*Geographical Map of COVID-19 Cases in Massachusetts_Exercise 4 url = {<a href="https://shannon3942.shinyapps.io/Shiny_app_Exercise4/" class="uri">https://shannon3942.shinyapps.io/Shiny_app_Exercise4/</a>}</p>
+<p>*Geographical Map of COVID-19 Cases in Massachusetts_Exercise 4 url = {<a href="https://shannon3942.shinyapps.io/Shiny_app_Exercise4/" class="uri">https://shannon3942.shinyapps.io/Shiny_app_Exercise4/</a>}</p>
+<p>*Human Population Census Data and US COVID-19 Data_Data Wrangling Lab url = {<a href="https://shannon3942.shinyapps.io/COVID19_Census_Data/?_ga=2.70520016.1503618193.1588895731-1842562172.1586978302" class="uri">https://shannon3942.shinyapps.io/COVID19_Census_Data/?_ga=2.70520016.1503618193.1588895731-1842562172.1586978302</a>}</p>
 <p>Application written in R <span class="citation">(R Core Team 2015)</span> using the Shiny framework <span class="citation">(Chang et al. 2015)</span></p>
 </div>
 <div id="references" class="section level1 unnumbered">
